proj1/tests/error/class_in_while.py
while True:
	class ClassName:
		"""docstring for ClassName"""
		def __init__(self, arg):
			super(ClassName, self).__init__()
			self.arg = arg
			